--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/style.css">
-  <title>Quick photo Editor | Edit your photo Quickly</title>
+  <title>Quick photo by Aiman*͘⁴̅⁰͍⁴̵〆* | Edit your photo Quickly</title>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
@@ -114,7 +114,7 @@
 
   <section class="footer">
     <div class="logo">
-      <p>#quickphotoEditor</p>
+      <p>#quickphotoEditor by Aiman</p>
     </div>
     <div class="useful-links">
       <ul>
